Added Templates page and revised home page.

--- a/src/AbpWebSite/AbpWebSite.Web/Views/Home/Index.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Home/Index.cshtml
@@ -2,19 +2,20 @@
     ViewBag.CurrentPage = "Home";
 }
 <div>
-    <h1>Welcome to ASP.NET Boilerplate</h1>
+    <h2>Welcome to ASP.NET Boilerplate</h2>
     <p class="lead">A starting point for web applications with best practices and most popular tools!</p>
     <div class="row">
         <div class="col-md-4">
             <h3>Architecture</h3>
             <p>
-                ASP.NET Boilerplate implements <strong>NLayer architecture</strong> and <strong>Domain Driven Design</strong>.
+                ASP.NET Boilerplate implements <strong>NLayer architecture</strong> (Domain, Application, Infrastructure and Presentation Layers)
+                and <strong>Domain Driven Design</strong> (Entities, Repositories, Domain/Application Services, DTO's...).
             </p>
         </div>
         <div class="col-md-4">
             <h3>Frameworks</h3>
             <p>
-                ASP.NET Boilerplate is built on latest <strong>ASP.NET MVC</strong> &amp; <strong>Web API</strong> technologies. 
+                ASP.NET Boilerplate is built on latest ASP.NET MVC &amp; Web API technologies.
                 Uses Castle Windsor as Dependency Injection Container, NHibernate as O/RM framework, Log4Net for logging, FluentMigrator for database migrations and so on.
                 Also, in client side, uses DurandalJs, KnockoutJs, jQuery, RequireJs, Less for CSS.
             </p>
@@ -23,6 +24,27 @@
             <h3>Best Practices</h3>
             <p>
                 ASP.NET Boilerplate implements and provides a good infrastructure to implement Best Practices such as <strong>Dependency Injection</strong>.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <h3>Templates</h3>
+            <p>
+                ASP.NET Boilerplate provides templates for <strong>Single-Page Applications</strong> and Classic Multi-Page Applications.
+                These templates are ready to start to develop new applications. There are also sample projects made with ASP.NET Boilerplate.
+            </p>
+        </div>
+        <div class="col-md-4">
+            <h3>Github</h3>
+            <p>
+                ASP.NET Boilerplate is an <strong>Open Source</strong> project that is being developed under <a href="https://github.com/aspnetboilerplate" target="_blank">github</a>.
+            </p>
+        </div>
+        <div class="col-md-4">
+            <h3>Nuget</h3>
+            <p>
+                ASP.NET Boilerplate libraries are published on <strong>nuget</strong> for Visual Studio.
             </p>
         </div>
     </div>
