--- a/src/AbpWebSite/AbpWebSite.Web/Views/Shared/_Layout.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Shared/_Layout.cshtml
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Halil İbrahim Kalkan">
+    <meta name="description" content="A starting point for ASP.NET MVC web applications with best practices and most popular tools!">
+    <meta name="keywords" content="ASP.NET Boilerplate, MVC, Single Page Application, SPA, Web Template, Web Framework, Application Framework">
 
     <!-- favicon -->
     <link rel="shortcut icon" href="~/favicon.ico">
