Added article to the web site

--- a/src/AbpWebSite/AbpWebSite.Web/Views/Documents/Index.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Documents/Index.cshtml
@@ -4,6 +4,6 @@
 <div>
     <h2>ASP.NET Boilerplate Documents</h2>
     <p>
-        ASP.NET Boilerplate is a new framework. Documentations are being prapered and will be linked here. Follow it...
+        <a href="@Url.Action("IntroductionWithSimpleTaskSystem")">Introduction to ASP.NET Boilerplate with Simple Task System application</a>
     </p>
 </div>
