Added logging of usage

--- a/src/AbpWebSite/AbpWebSite.Web/Views/Documents/IntroductionWithSimpleTaskSystem.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Documents/IntroductionWithSimpleTaskSystem.cshtml
@@ -1,6 +1,6 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Introduction to ASP.NET Boilerplate";
+    ViewBag.CurrentPage = "Documents";
 }
 
 <h1>Introduction to ASP.NET Boilerplate</h1>
