--- a/src/AbpWebSite/AbpWebSite.Web/Views/Shared/_Layout.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Shared/_Layout.cshtml
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Halil İbrahim Kalkan">
     <meta name="description" content="A starting point for ASP.NET MVC web applications with best practices and most popular tools!">
-    <meta name="keywords" content="ASP.NET Boilerplate, MVC, Single Page Application, SPA, Web Template, Web Framework, Application Framework">
+    <meta name="keywords" content="ASP.NET Boilerplate, ASP.NET, MVC, Single Page Application, SPA, Web Template, Web Framework, Application Framework, ASP.NET Web API, jQuery, Durandal, Knockoutjs">
 
     <!-- favicon -->
     <link rel="shortcut icon" href="~/favicon.ico">
 
     <!-- Site title -->
-    <title>My ASBP.NET Boilerplate Project!</title>
+    <title>ASP.NET Boilerplate!</title>
 
     <!-- Style for jQueryUI -->
     <link href="~/Content/themes/base/minified/jquery-ui.min.css" rel="stylesheet" />
