Added reference to CodeProject article

--- a/src/AbpWebSite/AbpWebSite.Web/Views/Documents/Index.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Documents/Index.cshtml
@@ -3,7 +3,9 @@
 }
 <div>
     <h2>ASP.NET Boilerplate Documents</h2>
-    <p>
-        <a href="@Url.Action("IntroductionWithSimpleTaskSystem")">Introduction to ASP.NET Boilerplate with Simple Task System application</a>
-    </p>
+    <ul>
+        <li>
+            <a href="http://www.codeproject.com/Articles/768664/Introduction-to-ASP-NET-Boilerplate">Introduction to ASP.NET Boilerplate</a>
+        </li>
+    </ul>
 </div>
