Updated main page

--- a/src/AbpWebSite/AbpWebSite.Web/Views/Home/Index.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
             <p>
                 ASP.NET Boilerplate implements <strong>NLayer architecture</strong> (Domain, Application, Infrastructure and Presentation Layers)
                 and <strong>Domain Driven Design</strong> (Entities, Repositories, Domain/Application Services, DTO's...).
+                Also implements and provides a good infrastructure to implement <strong>best practices</strong> such as <strong>Dependency Injection</strong>.
             </p>
         </div>
         <div class="col-md-4">
@@ -21,13 +22,20 @@
             </p>
         </div>
         <div class="col-md-4">
-            <h3>Best Practices</h3>
+            <h3>Open source</h3>
             <p>
-                ASP.NET Boilerplate implements and provides a good infrastructure to implement Best Practices such as <strong>Dependency Injection</strong>.
+                ASP.NET Boilerplate is an <strong>Open Source</strong> project that is being developed under <a href="https://github.com/aspnetboilerplate" target="_blank">github</a>.
+                Libraries are published on <strong>nuget</strong> for Visual Studio.
             </p>
         </div>
     </div>
     <div class="row">
+        <div class="col-md-4">
+            <h3>Tutorials</h3>
+            <p>
+                Click here to read the <a href="http://www.codeproject.com/Articles/768664/Introduction-to-ASP-NET-Boilerplate" target="_blank">Introduction to ASP.NET Boilerplate</a>.
+            </p>
+        </div>
         <div class="col-md-4">
             <h3>Templates</h3>
             <p>
@@ -36,15 +44,9 @@
             </p>
         </div>
         <div class="col-md-4">
-            <h3>Github</h3>
+            <h3>Sample projects</h3>
             <p>
-                ASP.NET Boilerplate is an <strong>Open Source</strong> project that is being developed under <a href="https://github.com/aspnetboilerplate" target="_blank">github</a>.
-            </p>
-        </div>
-        <div class="col-md-4">
-            <h3>Nuget</h3>
-            <p>
-                ASP.NET Boilerplate libraries are published on <strong>nuget</strong> for Visual Studio.
+                See <a href="http://www.taskever.com">Taskever</a> for a comprehensive application built on ASP.NET Boilerplate. Also see <a href="https://github.com/aspnetboilerplate/aspnetboilerplate-samples">samples on github</a> for simpler sample applications.
             </p>
         </div>
     </div>
