Started a simple CMS

--- a/src/AbpWebSite/AbpWebSite.Web/Views/Shared/_Layout.cshtml
+++ b/src/AbpWebSite/AbpWebSite.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="~/favicon.ico">
 
     <!-- Site title -->
-    <title>ASP.NET Boilerplate!</title>
+    <title>ASP.NET Boilerplate | @(ViewBag.Title ?? "Home Page")</title>
 
     <!-- Style for jQueryUI -->
     <link href="~/Content/themes/base/minified/jquery-ui.min.css" rel="stylesheet" />
